Fixed the footer (fix down on small devices)

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,3 +1,9 @@
+@media (max-width: 575px) {
+  .footer {
+    position: relative !important;
+  }
+}
+
 .footer {
   position: absolute;
   width: 100%;
